# backend/src/main/java/com/reach/backend/controllers/BrandController.java
@@ -1,5 +1,7 @@
 package com.reach.backend.controllers;
 
+import static org.springframework.http.HttpStatus.CREATED;
+
 import com.example.reach.backend.api.BrandApi;
 import com.example.reach.backend.dto.BrandDto;
 import com.reach.backend.domain.tables.Brand;
@@ -14,9 +16,21 @@ public class BrandController implements BrandApi {
   @Autowired private BrandService brandService;
 
   @Override
+  public ResponseEntity<BrandDto> getBrand(Integer id) {
+    return ResponseEntity.ok(BrandMapper.MAPPER.map(brandService.getBrand(id)));
+  }
+
+  @Override
   public ResponseEntity<BrandDto> addBrand(BrandDto brandDto) {
     Brand brand = BrandMapper.MAPPER.map(brandDto);
     BrandDto createdBrand = BrandMapper.MAPPER.map(brandService.createBrand(brand));
-    return ResponseEntity.ok(createdBrand);
+    return new ResponseEntity<>(createdBrand, CREATED);
+  }
+
+  @Override
+  public ResponseEntity<Void> updateBrand(BrandDto brandDto) {
+    Brand brand = BrandMapper.MAPPER.map(brandDto);
+    brandService.updateBrand(brand);
+    return ResponseEntity.noContent().build();
   }
 }
