# backend/src/main/resources/openapi.yaml
@@ -30,12 +30,12 @@ paths:
                 $ref: '#/components/schemas/HelloWorldError'
         '500':
           description: Internal server error
-  /Brand:
+  /brand:
     post:
       tags:
         - Brand
       summary: Add a new Brand
-      description: Call this endpoint to add a new Brand to the database
+      description: Add a new Brand to the database
       operationId: addBrand
       requestBody:
         required: true
@@ -44,21 +44,52 @@ paths:
             schema:
               $ref: '#/components/schemas/Brand'
       responses:
-        '200':
+        '201':
           description: Brand successfully added
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Brand'
-        '401':
-          description: Brand not created
+    put:
+      tags:
+        - Brand
+      summary: Update an existing Brand
+      description: Update an existing Brand in the database
+      operationId: updateBrand
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Brand'
+      responses:
+        '204':
+          description: Brand successfully updated
+        '404':
+          description: Brand to be updated not found
+  /brand/{id}:
+    get:
+      tags:
+        - Brand
+      summary: Get an existing Brand
+      description: Get an existing Brand by its id
+      operationId: getBrand
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          required: true
+          description: ID of the brand to retrieve
+      responses:
+        '200':
+          description: Brand successfully retrieved
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/BrandCreationError'
-        '500':
-          description: Internal or External server error
-
+                $ref: '#/components/schemas/Brand'
+        '404':
+          description: Brand not found
 
 components:
   schemas:
@@ -81,9 +112,6 @@ components:
           type: number
     Brand:
       type: object
-      required:
-        - name
-        - logo
       description: Brand created on the frontend level containing all details
       properties:
         id:
@@ -102,11 +130,3 @@ components:
           format: float
         region:
           type: string
-    BrandCreationError:
-      type: object
-      description: Failed to create a brand
-      properties:
-        error:
-          type: string
-        randomNumber:
-          type: number
